# WEPETS_BOT

./: .env.sample  Cargo.toml
src/: main.rs  states.rs
src/commands/: battle.rs  hunt.rs
